# mcp-file-edit

./: .gitignore  README.md  file_tools.py  git_tools.py  pyproject.toml  server.py  ssh_tools.py  test.py  test_ssh_transfer.py  test_treesitter.py  utils.py
src/mcp_file_edit/: code_analyzer.py  file_operations.py  file_tools.py  git_operations.py  git_tools.py  linting_tools.py  server.py  ssh_manager.py  ssh_tools.py  utils.py
tests/: test_all_tools.py  test_code_analysis.py  test_lint.py
