[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-file-edit"
version = "1.1.1"
description = "A powerful MCP server for comprehensive file system operations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Patrick Omatik", email = "test@github.com"},
]
keywords = ["mcp", "file-editor", "llm", "ai", "claude", "filesystem"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "mcp[cli]>=1.1.0",
    "asyncssh>=2.14.0",
    "fastmcp==3.0.0"
]

[project.urls]
"Homepage" = "https://github.com/patrickomatik/mcp-file-edit"
"Bug Tracker" = "https://github.com/patrickomatik/mcp-file-edit/issues"
"Repository" = "https://github.com/patrickomatik/mcp-file-edit"
"Changelog" = "https://github.com/patrickomatik/mcp-file-edit/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[tool.setuptools]
py-modules = ["server"]

[tool.setuptools.packages.find]
include = ["server*", "examples*", "tests*"]
